fixed insecure url

--- a/css/anythingslider.css
+++ b/css/anythingslider.css
@@ -254,7 +254,7 @@ div.anythingSlider .thumbNav a {
 
 	margin: 0 5px 0 0;
 
-	background-image: url(http://www.grindstoneangling.com/images/cellshade.png);
+	background-image: url(/images/cellshade.png);
 
 	background-repeat: repeat-x;
 
