--- a/css/anythingslider.css
+++ b/css/anythingslider.css
@@ -292,7 +292,7 @@ div.anythingSlider.rtl .thumbNav { float: left; }    /* move nav link group to l
 
 div.anythingSlider .start-stop {
 
-	background-image: url(http://www.grindstoneangling.com/images/cellshade.png);
+	background-image: url(/images/cellshade.png);
 
 	background-repeat: repeat-x;
 
